--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 12</title>
+	<title>Safwen Dammak Personal Website</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -27,23 +27,23 @@
 
 	<div class="flex-w flex-str size1 overlay1">
 		<div class="flex-w flex-col-sb wsize1 bg0 p-l-65 p-t-37 p-b-50 p-r-80 respon1">
-			<div class="wrappic1">
+			<!-- <div class="wrappic1">
 				<a href="#">
 					<img src="images/icons/logo.png" alt="IMG">
 				</a>
-			</div>		
+			</div -->	
 	
 			<div class="w-full flex-c-m p-t-80 p-b-90">
 				<div class="wsize2">
 					<h3 class="l1-txt1 p-b-34 respon3">
-						Coming Soon
+						Under Construction
 					</h3>
 
 					<p class="m2-txt1 p-b-46">
-						Follow us for update now!
+						Soon
 					</p>
 
-					<form class="contact100-form validate-form m-t-10 m-b-10">
+				<!-- 	<form class="contact100-form validate-form m-t-10 m-b-10">
 						<div class="wrap-input100 validate-input m-lr-auto-lg" data-validate = "Email is required: ex@abc.xyz">
 							<input class="s2-txt1 placeholder0 input100 trans-04" type="text" name="email" placeholder="Email Address">
 
@@ -51,21 +51,21 @@
 								<i class="zmdi zmdi-long-arrow-right fs-30 cl1 trans-04"></i>
 							</button>
 						</div>		
-					</form>
+					</form> -->
 				</div>
 			</div>
 			
 			<div class="flex-w">
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
+				<a href="https://www.facebook.com/dammak.safwen" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
 					<i class="fa fa-facebook"></i>
 				</a>
 
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
-					<i class="fa fa-twitter"></i>
+				<a href="https://www.linkedin.com/in/safwendammak/" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
+					<i class="fa fa-linkedin"></i>
 				</a>
 
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
-					<i class="fa fa-youtube-play"></i>
+				<a href="https://github.com/safwendammak" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
+					<i class="fa fa-github"></i>
 				</a>
 			</div>
 		</div>
@@ -75,8 +75,8 @@
 			<!--  -->
 			<div class="simpleslide100">
 				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg01.jpg');"></div>
-				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg02.jpg');"></div>
-				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg03.jpg');"></div>
+				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg04.jpg');"></div>
+				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg05.jpg');"></div>
 			</div>
 		</div>
 	</div>
