--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="simpleslide100">
 				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg01.jpg');"></div>
 				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg04.jpg');"></div>
-				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg05.jpg');"></div>
+				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg05.png');"></div>
 			</div>
 		</div>
 	</div>
